--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,12 @@
 			<artifactId>sitemesh</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<!-- protobuf-java -->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
